# gg-image-5000

./: .gitignore  README.md  convert.bat  lonely-japanese-cherry-160x144.rgb  sunflower-160x144.gg  temp.rgb
Source Code/buildggimg/: .gitignore  CMakeLists.txt  buildggimg.vcxproj
Source Code/buildggimg/scripts/: test.sh
Source Code/buildggimg/src/: argparse.c  gamegear_image_converter.c  gamegear_image_converter.h  main.c  rgb.c  seethe.h
Source Code/tespatterncb/: .gitignore  cassert.h  gamegear.h  image.h  testpattern.c  util.h  vdp.h
buildggimg/: buildggimg.sln  buildggimg.vcxproj.filters
buildggimg/images/: testpatterncb.gg  testpatterncb_output.gg
buildggimg/scripts/: test.bat
buildggimg/src/: argparse.h  rgb.h
tespatterncb/: buildcrt.sh  crt0.s  gamegear.c  image.c  testpatterncb.cbp  vdp.c  z80.h
